--- a/html_new/mystic-market.html
+++ b/html_new/mystic-market.html
@@ -51,7 +51,7 @@
             </button>
             <a
               aria-label="University of Victoria home link"
-              href=""
+              href="index.html"
               class="text-white fs-2 fw-semibold uvic-link"
               >University of Victoria</a
             >
@@ -98,7 +98,7 @@
     </header>
 
     <!-- Main Section -->
-    <main class="container-fluid bg-white p-0">
+    <main class="container-fluid p-0 unify-text">
       <header
         class="d-flex justify-content-center flex-column header mm-header align-items-center"
       >
@@ -122,12 +122,12 @@
             <div class="col-10 col-lg-8 the-h2 the-h2">
               <h2 class="text-center text-shadow display-4 location fw-lighter">
                 Boardwalk Cafe <br />
-                <span class="lead"><small>Hours: 9am-3pm</small></span>
+                <span class="lead"><small>Hours: 8am-5pm</small></span>
               </h2>
             </div>
           </article>
         </article>
-        <article class="col-md-6 order-1 order-md-2 px-0 mb-5">
+        <article class="col-md-6 order-1 order-md-2 px-0 mb-5 mb-md-0">
           <div class="image">
             <img
               id="mainCove"
@@ -150,7 +150,7 @@
             </div>
           </article>
         </article>
-        <article class="col-md-6 order-1 order-md-1 px-0 mb-5">
+        <article class="col-md-6 order-1 order-md-1 px-0 mb-5 mb-md-0">
           <div class="image">
             <img
               id="mainCove"
@@ -174,7 +174,7 @@
             </div>
           </article>
         </article>
-        <article class="col-md-6 order-1 order-md-1 px-0 mb-5">
+        <article class="col-md-6 order-1 order-md-1 px-0 mb-5 mb-md-0">
           <div class="image">
             <img
               id="mainCove"
@@ -199,7 +199,7 @@
             </div>
           </article>
         </article>
-        <article class="col-md-6 order-1 order-md-1 px-0 mb-5">
+        <article class="col-md-6 order-1 order-md-1 px-0 mb-5 mb-md-0">
           <div class="image">
             <img
               id="mainCove"
@@ -224,7 +224,7 @@
             </div>
           </article>
         </article>
-        <article class="col-md-6 order-2 order-md-2 px-0 mb-5">
+        <article class="col-md-6 order-2 order-md-2 px-0 mb-5 mb-md-0">
           <div class="image">
             <img
               id="mainCove"
@@ -235,20 +235,108 @@
           </div>
         </article>
       </section>
+
+      <!-- Pickle & Spice  -->
+      <section class="row d-flex justify-content-center align-items-center">
+        <article class="col-md-6 order-1 order-md-2 px-0 py-5">
+          <article class="row d-flex justify-content-center">
+            <div class="col-10 col-lg-8 the-h2">
+              <h2 class="text-center text-shadow display-4 location fw-lighter">
+                Pickle & Spice
+                <br />
+                <span class="lead"><small>Hours: 11am-3pm</small></span>
+              </h2>
+            </div>
+          </article>
+        </article>
+        <article
+          class="d-flex justify-content-center menu-not-available col-md-6 order-2 order-md-1 px-0 mb-5 mb-md-0"
+        >
+          <h1 class="display-1 text-center">MENU NOT AVAILABLE</h1>
+        </article>
+      </section>
+
+      <!-- Booster Juice  -->
+      <section class="row d-flex justify-content-center align-items-center">
+        <article class="col-md-6 order-1 order-md-1 px-0 py-5">
+          <article class="row d-flex justify-content-center">
+            <div class="col-10 col-lg-8 the-h2">
+              <h2 class="text-center text-shadow display-4 location fw-lighter">
+                Booster Juice
+                <br />
+                <span class="lead"><small>Hours: 10am-2pm</small></span>
+              </h2>
+            </div>
+          </article>
+        </article>
+        <article
+          class="d-flex justify-content-center menu-not-available col-md-6 order-2 order-md-2 px-0 mb-5 mb-md-0"
+        >
+          <h1 class="display-1 text-center">MENU NOT AVAILABLE</h1>
+        </article>
+      </section>
+
+      <!-- Tofinos -->
+      <section class="row d-flex justify-content-center align-items-center">
+        <article class="col-md-6 order-1 order-md-2 px-0 py-5">
+          <article class="row d-flex justify-content-center">
+            <div class="col-10 col-lg-8 the-h2">
+              <h2 class="text-center text-shadow display-4 location fw-lighter">
+                Tofinos
+                <br />
+                <span class="lead"><small>Hours: 11am-3pm</small></span>
+              </h2>
+            </div>
+          </article>
+        </article>
+        <article
+          class="d-flex justify-content-center menu-not-available col-md-6 order-2 order-md-1 px-0 mb-5 mb-md-0"
+        >
+          <h1 class="display-1 text-center">MENU NOT AVAILABLE</h1>
+        </article>
+      </section>
+      <!-- General Store -->
+      <section class="row d-flex justify-content-center align-items-center">
+        <article class="col-md-6 order-1 order-md-2 px-0 py-5">
+          <article class="row d-flex justify-content-center">
+            <div class="col-10 col-lg-8 the-h2">
+              <h2 class="text-center text-shadow display-4 location fw-lighter">
+                General Store
+                <br />
+                <span class="lead"><small>Hours: 8am-5pm</small></span>
+              </h2>
+            </div>
+          </article>
+        </article>
+        <article
+          class="d-flex justify-content-center menu-not-available col-md-6 order-2 order-md-1 px-0 mb-5 mb-md-0"
+        >
+          <h1 class="display-6 text-center">
+            Snacks, Candy, and Drinks (Not on Meal Plan)
+          </h1>
+        </article>
+      </section>
     </main>
 
-    <footerm class="map-jcc container-fluid px-0 wh-100">
+    <footer class="map-jcc container-fluid px-0 wh-100">
       <article class="d-flex justify-content-center location">
-        <h1 class="text-white">Location on Campus</h1>
+        <h1 class="text-warning">Location on Campus</h1>
       </article>
-      <section class="d-flex justify-content-center">
+      <section class="d-flex justify-content-center mb-5">
         <img
           src="../img/Screenshot 2025-04-21 200338.png"
           class="img-fluid d-block w-75"
           alt=""
         />
       </section>
-    </footerm>
+      <footer
+        class="footer-sect d-flex justify-content-center text-white fs-3 py-2 bg-primary"
+      >
+        <p class="align-self-center m-0">
+          &copy; UVic Cuisine. All Rights Reserved.
+        </p>
+      </footer>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
