--- a/html_new/health-food-bar.html
+++ b/html_new/health-food-bar.html
@@ -14,6 +14,13 @@
       rel="stylesheet"
       href="../../node_modules/bootstrap/dist/css/bootstrap.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="../css/app.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/1bb4953290.js"
