--- a/html_new/mystic-market.html
+++ b/html_new/mystic-market.html
@@ -50,6 +50,7 @@
           <div class="container gap-3 justify-content-start align-items-center">
             <button
               class="navbar-toggler my-2"
+              id="mm-navbar-toggler"
               data-bs-toggle="collapse"
               data-bs-target="#navLinks"
               aria-label="toggle navigation"
@@ -59,13 +60,15 @@
             <a
               aria-label="University of Victoria home link"
               href="index.html"
-              class="text-white fs-2 fw-semibold uvic-link"
+              class="fs-2 fw-semibold uvic-link"
+              id="mm-dropdown"
               >University of Victoria</a
             >
             <div class="collapse navbar-collapse" id="navLinks">
               <ul
                 style="width: 100%"
                 class="navbar-nav fs-4 fw-semibold justify-content-start py-4"
+                id="mm-dropdown"
               >
                 <li class="nav-item">
                   <a href="index.html" class="nav-link">Home</a>
