--- a/html_new/index.html
+++ b/html_new/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>UVic Cuisine - University of Victoria Food Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,129 +39,131 @@
           >
         </div>
       </div>
-      <div class="container-fluid bg-primary">
-        <nav class="p-0 navbar container navbar-expand-md sticky-top">
-          <div class="container gap-3 justify-content-start align-items-center">
-            <button
-              class="navbar-toggler my-2"
-              data-bs-toggle="collapse"
-              data-bs-target="#navLinks"
-              aria-label="toggle navigation"
-            >
-              <i class="fa-solid fa-bars fa-2xl"></i>
-            </button>
-            <a
-              aria-label="University of Victoria home link"
-              href=""
-              class="text-white fs-2 fw-semibold uvic-link"
-              >University of Victoria</a
-            >
-            <div class="collapse navbar-collapse" id="navLinks">
-              <ul
-                style="width: 100%"
-                class="navbar-nav fs-4 fw-semibold justify-content-start py-4"
-              >
-              <li class="nav-item">
-                <a href="index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a href="#about" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-                <a href="mystic-market.html" class="nav-link">
-                    <span class="full-text">Mystic Market</span>
-                    <span class="short-text">MM</span></a>
-            </li>
-            <li class="nav-item">
-                <a href="the-cove.html" class="nav-link">
-                    <span class="full-text">The Cove</span>
-                    <span class="short-text">TC</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="the-grill.html" class="nav-link">
-                    <span class="full-text">The Grill</span>
-                    <span class="short-text">TG</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="health-food-bar.html" class="nav-link">
-                    <span class="full-text">Health & Food Bar</span>
-                    <span class="short-text">HFB</span>
-                </a>
-            </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-      <div
-        id="carouselExampleAutoplaying"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="https://www.uvic.ca/services/food/assets/images/chef-homegrownandhandcrafted.png"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://www.uvic.ca/services/food/assets/images/eco-hero.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://www.uvic.ca/services/food/assets/images/feedbc-banner-green"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div
-            class="position-absolute top-0 start-0 w-100 h-100 text-primary fw-bold bg-dark opacity-75"
-          ></div>
-          <div
-            class="position-absolute text-center w-100 h-100 top-0 start-0 text-primary fw-bold opacity-100"
+     
+    
+    </header>
+    <div class="container-fluid bg-primary sticky-top">
+      <nav class="p-0 navbar container navbar-expand-md">
+        <div class="container gap-3 justify-content-start align-items-center">
+          <button
+            class="navbar-toggler my-2"
+            data-bs-toggle="collapse"
+            data-bs-target="#navLinks"
+            aria-label="toggle navigation"
           >
-            <div
-              class="container-fluid flex-column text-shadow text header-main z-n1"
+            <i class="fa-solid fa-bars fa-2xl"></i>
+          </button>
+          <a
+            aria-label="University of Victoria home link"
+            href=""
+            class="text-white fs-2 fw-semibold uvic-link"
+            >University of Victoria</a
+          >
+          <div class="collapse navbar-collapse" id="navLinks">
+            <ul
+              style="width: 100%"
+              class="navbar-nav fs-4 fw-semibold justify-content-start py-4"
             >
-              <h1 class="text-center   display-2 opacity-100 header-text">
-                A new type of <strong>taste</strong> at UVic
-              </h1>
-              <p class="text-center blurb  ">
-                We provide quality taste for quality prices (NO) <br />
-                You decide your taste journey
-              </p>
-            </div>
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+              <a href="mystic-market.html" class="nav-link">
+                  <span class="full-text">Mystic Market</span>
+                  <span class="short-text">MM</span></a>
+          </li>
+          <li class="nav-item">
+              <a href="the-cove.html" class="nav-link">
+                  <span class="full-text">The Cove</span>
+                  <span class="short-text">TC</span>
+              </a>
+          </li>
+          <li class="nav-item">
+              <a href="the-grill.html" class="nav-link">
+                  <span class="full-text">The Grill</span>
+                  <span class="short-text">TG</span>
+              </a>
+          </li>
+          <li class="nav-item">
+              <a href="health-food-bar.html" class="nav-link">
+                  <span class="full-text">Health & Food Bar</span>
+                  <span class="short-text">HFB</span>
+              </a>
+          </li>
+            </ul>
           </div>
         </div>
-
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      </nav>
+    </div>
+    <div
+    id="carouselExampleAutoplaying"
+    class="carousel slide"
+    data-bs-ride="carousel"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          src="https://www.uvic.ca/services/food/assets/images/chef-homegrownandhandcrafted.png"
+          class="d-block w-100"
+          alt="..."
+        />
       </div>
-    </header>
+      <div class="carousel-item">
+        <img
+          src="https://www.uvic.ca/services/food/assets/images/eco-hero.jpg"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://www.uvic.ca/services/food/assets/images/feedbc-banner-green"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+      <div
+        class="position-absolute top-0 start-0 w-100 h-100 text-primary fw-bold bg-dark opacity-75"
+      ></div>
+      <div
+        class="position-absolute text-center w-100 h-100 top-0 start-0 text-primary fw-bold opacity-100"
+      >
+        <div
+          class="container-fluid flex-column text-shadow text header-main z-n1"
+        >
+          <h1 class="text-center   display-2 opacity-100 header-text">
+            A new type of <strong>taste</strong> at UVic
+          </h1>
+          <p class="text-center blurb  ">
+            We provide quality taste for quality prices (NO) <br />
+            You decide your taste journey
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
     <!-- Main Section -->
     <main class="container-fluid fw-semibold px-2">
       <section class="row d-flex justify-content-center align-items-center">
@@ -223,7 +225,7 @@
           </article>
         </article>
         <article class="col-md-6 order-1 order-md-2 px-0 mb-5 mb-5">
-          <div class="row d-flex justify-content-center">
+          <div class="row d-flex justify-content-center scale-img text-center">
             <div class="col-6 p-0">
                 <a href="mystic-market.html">
                     <img src="../img/mm.jpg" alt="Mystic Market" class="img-fluid" />
