--- a/html_new/mystic-market.html
+++ b/html_new/mystic-market.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mystic Market - JCC</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,68 +45,65 @@
           >
         </div>
       </div>
-      <div class="container-fluid navbar-links">
-        <nav class="p-0 navbar container navbar-expand-md sticky-top">
-          <div class="container gap-3 justify-content-start align-items-center">
-            <button
-              class="navbar-toggler my-2"
-              id="mm-navbar-toggler"
-              data-bs-toggle="collapse"
-              data-bs-target="#navLinks"
-              aria-label="toggle navigation"
-            >
-              <i class="fa-solid fa-bars fa-2xl"></i>
-            </button>
-            <a
-              aria-label="University of Victoria home link"
-              href="index.html"
-              class="fs-2 fw-semibold uvic-link"
-              id="mm-dropdown"
-              >University of Victoria</a
-            >
-            <div class="collapse navbar-collapse" id="navLinks">
-              <ul
-                style="width: 100%"
-                class="navbar-nav fs-4 fw-semibold justify-content-start py-4"
-                id="mm-dropdown"
-              >
-                <li class="nav-item">
-                  <a href="index.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#about" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                  <a href="mystic-market.html" class="nav-link">
-                    <span class="full-text">Mystic Market</span>
-                    <span class="short-text">MM</span></a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a href="the-cove.html" class="nav-link">
-                    <span class="full-text">The Cove</span>
-                    <span class="short-text">TC</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="the-grill.html" class="nav-link">
-                    <span class="full-text">The Grill</span>
-                    <span class="short-text">TG</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="health-food-bar.html" class="nav-link">
-                    <span class="full-text">Health & Food Bar</span>
-                    <span class="short-text">HFB</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
     </header>
+    <div class="container-fluid navbar-links sticky-top">
+      <nav class="p-0 navbar container navbar-expand-md">
+        <div class="container gap-3 justify-content-start align-items-center">
+          <button
+            class="navbar-toggler my-2"
+            id="mm-navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#navLinks"
+            aria-label="toggle navigation"
+          >
+            <i class="fa-solid fa-bars fa-2xl"></i>
+          </button>
+          <a
+            aria-label="University of Victoria home link"
+            href="index.html"
+            class="fs-2 fw-semibold uvic-link"
+            id="mm-dropdown"
+            >University of Victoria</a
+          >
+          <div class="collapse navbar-collapse" id="navLinks">
+            <ul
+              style="width: 100%"
+              class="navbar-nav fs-4 fw-semibold justify-content-start py-4"
+              id="mm-dropdown"
+            >
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+              </li>
 
+              <li class="nav-item">
+                <a href="mystic-market.html" class="nav-link">
+                  <span class="full-text">Mystic Market</span>
+                  <span class="short-text">MM</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="the-cove.html" class="nav-link">
+                  <span class="full-text">The Cove</span>
+                  <span class="short-text">TC</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="the-grill.html" class="nav-link">
+                  <span class="full-text">The Grill</span>
+                  <span class="short-text">TG</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="health-food-bar.html" class="nav-link">
+                  <span class="full-text">Health & Food Bar</span>
+                  <span class="short-text">HFB</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
     <!-- Main Section -->
     <main class="container-fluid p-0 unify-text">
       <header
