--- a/html_new/the-cove.html
+++ b/html_new/the-cove.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The Cove - UVic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +22,7 @@
     />
 
     <link rel="stylesheet" href="../css/app.css" type="text/css" />
+    <link rel="stylesheet" href="../css/the-cove.css" />
     <script
       src="https://kit.fontawesome.com/1bb4953290.js"
       crossorigin="anonymous"
@@ -40,69 +41,78 @@
           </a>
 
           <span class="text-info display-2 fw-semibold uvic-cuisine"
-            >UVic Cuisine</span
+            >The Cove</span
           >
         </div>
       </div>
-      <div class="container-fluid bg-primary">
-        <nav class="p-0 navbar container navbar-expand-md sticky-top">
-          <div class="container gap-3 justify-content-start align-items-center">
-            <button
-              class="navbar-toggler my-2"
-              data-bs-toggle="collapse"
-              data-bs-target="#navLinks"
-              aria-label="toggle navigation"
-            >
-              <i class="fa-solid fa-bars fa-2xl"></i>
-            </button>
-            <a
-              aria-label="University of Victoria home link"
-              href=""
-              class="text-white fs-2 fw-semibold uvic-link"
-              >University of Victoria</a
-            >
-            <div class="collapse navbar-collapse" id="navLinks">
-              <ul
-                style="width: 100%"
-                class="navbar-nav fs-4 fw-semibold justify-content-start py-4"
-              >
-                <li class="nav-item">
-                  <a href="index.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#about" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                  <a href="mystic-market.html" class="nav-link">
-                    <span class="full-text">Mystic Market</span>
-                    <span class="short-text">MM</span></a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a href="the-cove.html" class="nav-link">
-                    <span class="full-text">The Cove</span>
-                    <span class="short-text">TC</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="the-grill.html" class="nav-link">
-                    <span class="full-text">The Grill</span>
-                    <span class="short-text">TG</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="health-food-bar.html" class="nav-link">
-                    <span class="full-text">Health & Food Bar</span>
-                    <span class="short-text">HFB</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
     </header>
+    <div class="container-fluid bg-primary sticky-top">
+      <nav class="p-0 navbar container navbar-expand-md">
+        <div class="container gap-3 justify-content-start align-items-center">
+          <button
+            class="navbar-toggler my-2"
+            data-bs-toggle="collapse"
+            data-bs-target="#navLinks"
+            aria-label="toggle navigation"
+          >
+            <i class="fa-solid fa-bars fa-2xl"></i>
+          </button>
+          <a
+            aria-label="University of Victoria home link"
+            href=""
+            class="text-white fs-2 fw-semibold uvic-link"
+            >University of Victoria</a
+          >
+          <div class="collapse navbar-collapse" id="navLinks">
+            <ul
+              style="width: 100%"
+              class="navbar-nav fs-4 fw-semibold justify-content-start py-4"
+            >
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="#about" class="nav-link">About</a>
+              </li>
+              <li class="nav-item">
+                <a href="mystic-market.html" class="nav-link">
+                  <span class="full-text">Mystic Market</span>
+                  <span class="short-text">MM</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="the-cove.html" class="nav-link">
+                  <span class="full-text">The Cove</span>
+                  <span class="short-text">TC</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="the-grill.html" class="nav-link">
+                  <span class="full-text">The Grill</span>
+                  <span class="short-text">TG</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="health-food-bar.html" class="nav-link">
+                  <span class="full-text">Health & Food Bar</span>
+                  <span class="short-text">HFB</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
 
+    <main class="container-fluid d-flex justify-content-center">
+      <header class="text-primary vh-100 align-content-center text-center">
+        <h1 class="display-1 the-cove-header text-shadow">The Cove</h1>
+        <p class="lead location text-shadow">
+          The Most Accessable Food Service on Campus <br />
+          <span>Mon-Thur: 7:30am-11pm - Fri-Sun: 7:30am-11pm</span>
+        </p>
+      </header>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
