Cove Unfinished, Everything else completed but still a very static and room for improvement

--- a/html/health-food-bar.html
+++ b/html/health-food-bar.html
@@ -32,7 +32,7 @@
     <header class="container-fluid px-0 m-0" id="">
       <div class="container-fluid d-flex align-self-center p-3">
         <div class="container d-flex justify-content-start">
-          <a href="index.html" target="" class="logo d-flex navbar-brand"
+          <a href="index.html"  class="logo d-flex navbar-brand"
             ><img
               class="img-fluid"
               src="../img/uvic-wordmark-colour.svg"
