--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
     <header class="container-fluid header p-0">
       <div class="container-fluid d-flex align-self-center p-3">
         <div class="container d-flex justify-content-start">
-          <a href="index.html" target="none" class="logo d-flex navbar-brand"
+          <a href="index.html"class="logo d-flex navbar-brand"
             ><img
               class="img-fluid"
               src="../img/uvic-wordmark-colour.svg"
