--- a/html/the-grill.html
+++ b/html/the-grill.html
@@ -32,7 +32,7 @@
     <header class="container-fluid grill-bg px-0 m-0">
       <div class="container-fluid d-flex align-self-center p-3">
         <div class="container d-flex justify-content-start">
-          <a href="index.html" target="none" class="logo d-flex navbar-brand"
+          <a href="index.html"  class="logo d-flex navbar-brand"
             ><img
               class="img-fluid"
               src="../img/uvic-wordmark-colour.svg"
