Cove Unfinished, Everything else completed but still a very static and room for improvement

--- a/html/mystic-market.html
+++ b/html/mystic-market.html
@@ -331,7 +331,7 @@
       </article>
       <section class="d-flex justify-content-center mb-5">
         <img
-          src="../img/Screenshot 2025-04-21 200338.png"
+          src="../img/mysticmarket-map.png"
           class="img-fluid d-block w-75"
           alt=""
         />
