--- a/html/health-food-bar.html
+++ b/html/health-food-bar.html
@@ -249,7 +249,7 @@
     class="footer-sect d-flex justify-content-center text-white fs-3 py-2 bg-primary"
   >
     <p class="align-self-center m-0">
-      &copy; UVic Cuisine. All Rights Reserved.
+      UVic Cuisine. I DO NOT OWN ANY OF THE IMAGES OR ICONS ON THIS SITE. THIS IS STRICTLY A REMAKE. University of Victoria site: https://www.uvic.ca/
     </p>
   </footer>
     <script
