updated responsive behaviour on phones

--- a/html/the-cove.html
+++ b/html/the-cove.html
@@ -15,17 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dosis:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/bootstrap/dist/css/bootstrap.css"
-    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/app.css" type="text/css" />
     <link rel="stylesheet" href="../css/the-cove.css" />
     <script
@@ -111,13 +108,14 @@
 
     <main class="container-fluid d-flex justify-content-center">
       <header class="text-primary vh-100 align-content-center text-center">
-        <h1 class="display-1 the-cove-header text-shadow">The Cove</h1>
+        <h1 class="display-1 the-cove-header text-shadow logo">The Cove</h1>
         <p class="lead location text-shadow">
           The Most Accessable Food Service on Campus <br />
           <span>Mon-Thur: 7:30am-11pm - Fri-Sun: 7:30am-11pm</span>
         </p>
       </header>
     </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
