--- a/html/index.html
+++ b/html/index.html
@@ -11,11 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dosis:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/bootstrap/dist/css/bootstrap.min.css"  
-    />
+   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/app.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/1bb4953290.js"
@@ -133,9 +131,9 @@
         class="position-absolute text-center w-100 h-100 top-0 start-0 text-primary fw-bold opacity-100"
       >
         <div
-          class="container-fluid flex-column text-shadow text header-main z-n1"
+          class="container-fluid flex-column text-shadow text header-main z-n1 "
         >
-          <h1 class="text-center   display-2 opacity-100 header-text">
+          <h1 class="text-center logo   display-2 opacity-100 header-text">
             A new type of <strong>taste</strong> at UVic
           </h1>
           <p class="text-center blurb  ">
@@ -290,6 +288,7 @@
         UVic Cuisine. I DO NOT OWN ANY OF THE IMAGES OR ICONS ON THIS SITE. THIS IS STRICTLY A REMAKE. University of Victoria site: https://www.uvic.ca/
       </p>
     </footer>
+    <script src="../js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
