--- a/html/mystic-market.html
+++ b/html/mystic-market.html
@@ -15,17 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dosis:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/bootstrap/dist/css/bootstrap.css"
-    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/app.css" type="text/css" />
     <link rel="stylesheet" href="../css/mystic_new.css" type="text/css" />
     <script
@@ -42,6 +39,7 @@
               class="img-fluid"
               src="../img/uvic-wordmark-colour.svg"
               alt="UVIC LOGO"
+              id=""
             />
           </a>
 
@@ -114,7 +112,9 @@
       <header
         class="d-flex justify-content-center flex-column header mm-header align-items-center"
       >
-        <h1 class="display-1 mm-title-header text-shadow">Mystic Market</h1>
+        <h1 class="display-1 mm-title-header text-shadow logo">
+          Mystic Market
+        </h1>
         <p class="lead mm-hours text-shadow">
           Come Join Us: <small> 9am-3pm</small>
         </p>
@@ -351,7 +351,7 @@
         </p>
       </footer>
     </footer>
-
+    <script src="../js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
